[doyto-query] upgrade to Spring-Boot-3.0 and Java 17