@@ -25,7 +25,6 @@ import win.doyto.query.test.TestQuery;
 
 import java.lang.reflect.Field;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -63,7 +62,7 @@ class ColumnUtilTest {
 
     @Test
     void shouldPlaceFieldsOfSuperClassAtFirstPosition() {
-        List<Field> fields = ColumnUtil.filterFields(TestChildQuery.class, ColumnUtil::shouldRetain).collect(Collectors.toList());
+        List<Field> fields = ColumnUtil.filterFields(TestChildQuery.class, ColumnUtil::shouldRetain).toList();
         assertEquals("perm", fields.get(0).getName());
         assertEquals("idIn", fields.get(1).getName());
         assertEquals("oneMoreField", fields.get(fields.size() - 1).getName());
